modified:   templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gesture-Based Media Control</title>
+    <title>WAVEPLAY</title>
     <style>
       body {
         font-family: "Arial", sans-serif;
@@ -121,7 +121,7 @@
     <div class="container">
       <h1>Gesture-Based Media Control</h1>
       <p class="description">
-        Use your hand gestures to control media playback.
+        WavePlay is an innovative media player controller utilizing hand gestures for seamless interaction. 
       </p>
       <div class="button-container">
         <button id="startButton" class="control-button">Start</button>
