modified:   templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Gesture-Based Media Control</h1>
+      <h1>WavePlay</h1>
       <p class="description">
         WavePlay is an innovative media player controller utilizing hand gestures for seamless interaction. 
       </p>
